# software-renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  camera.c  camera.h  clipping.c  clipping.h  color.h  config.c  config.h  darray.c  darray.h  display.c  display.h  frustum.c  frustum.h  input.c  input.h  main.c  mat.h  mesh.c  mesh.h  renderer.c  renderer.h  sort.c  sort.h  system.h  texture.c  texture.h  texture_mapper.c  texture_mapper.h  triangle.h  triangle_shaded.c  triangle_textured.c  vec.c  vec.h  view_frustum.c  view_frustum.h
